--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "i": "^0.3.7",
     "pinia": "^2.0.33",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vue3-draggable": "^2.0.9",
     "vuetify": "^3.1.4"
   },
   "devDependencies": {
