--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "i": "^0.3.7",
     "pinia": "^2.0.33",
     "vue": "^3.2.45",
+    "vue-draggable-next": "^2.1.1",
     "vue-router": "^4.1.6",
     "vue3-draggable": "^2.0.9",
     "vuetify": "^3.1.4"
